GitOps/environments/dev/ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: saotech/ui-service:3126ce6
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
