GitOps/environments/dev/ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamcart-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-service
            port:
              number: 80
